--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 # Python: >=3.12,<3.13
-# CPU-only users: replace faiss-gpu-cu12 + nvidia-* with faiss-cpu
+# CPU-only: replace faiss-gpu-cu12 + nvidia-* with faiss-cpu
+
+
+# Core RAG Dependencies
 aiosqlite>=0.22.1
 faiss-gpu-cu12==1.8.0.2
 fastapi>=0.128.0
@@ -16,3 +19,10 @@ python-multipart>=0.0.21
 rank-bm25>=0.2.2
 tqdm>=4.67.1
 uvicorn[standard]>=0.40.0
+
+
+# CLI Dependencies (Terminal UI)
+rich>=13.9.0
+prompt-toolkit>=3.0.48
+httpx>=0.28.0
+psutil>=6.0.0
