--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,17 @@ dependencies = [
     "psutil>=6.0.0",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest>=9.0.0",
+    "pytest-cov>=7.0.0",
+    "pytest-asyncio>=1.0.0",
+]
+dev = [
+    "ruff>=0.9.0",
+    "mypy>=1.0.0",
+]
+
 [project.scripts]
 hybrid-rag = "cli.main:main"
 hrag = "cli.main:main"
@@ -39,3 +50,20 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src", "cli"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+asyncio_mode = "auto"
+addopts = "-v --tb=short"
+
+[tool.ruff]
+target-version = "py312"
+line-length = 100
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP"]
+ignore = ["E501"]
+
